alignement issue

--- a/public/css/include/common.less
+++ b/public/css/include/common.less
@@ -214,7 +214,8 @@ body {
     &>p {
       margin: 0 0 5px;
     }
-    &>a {
+    &.modallink {
+      &>a {
       display: inline-block;
       margin: 0 0 5px;
       color: white;
@@ -222,6 +223,8 @@ body {
         text-decoration: none;
       }
     }
+    }
+    
     .topleft {
       position: relative;
       top: 3px;    }
